bk_ida/gccida/g2/cse_end_of_basic_block
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7297:4: error: expected ';' after expression
rtx real_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7297:5: error: use of undeclared identifier 'real_insn'
rtx real_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7320:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7320:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7323:4: error: expected ';' after expression
rtx v36; // r9 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7323:5: error: use of undeclared identifier 'v36'
rtx v36; // r9 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7326:4: error: expected ';' after expression
rtx v39; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7326:5: error: use of undeclared identifier 'v39'
rtx v39; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7328:6: error: use of undeclared identifier 'p_branch'
rtx *p_branch; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7329:4: error: expected ';' after expression
rtx v42; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7329:5: error: use of undeclared identifier 'v42'
rtx v42; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7332:4: error: expected ';' after expression
rtx v45; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7332:5: error: use of undeclared identifier 'v45'
rtx v45; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7333:6: error: use of undeclared identifier 'v46'
rtx *v46; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7339:4: error: expected ';' after expression
rtx qd; // [rsp+8h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7339:5: error: use of undeclared identifier 'qd'
rtx qd; // [rsp+8h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7340:4: error: expected ';' after expression
rtx q; // [rsp+8h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7340:5: error: use of undeclared identifier 'q'
rtx q; // [rsp+8h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/cse.c:7341:4: error: expected ';' after expression
rtx qa; // [rsp+8h] [rbp-60h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_end_of_basic_block/src/obj/cse.o] Error 1
